--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 	<!-- DO NOT CHANGE ANYTHING ABOVE THIS LINE-->
 
 	<!-- Javascript Framework (e.g., vue.js) (ADD HERE) -->
-	
-	
+
+	<script src="https://cdn.jsdelivr.net/npm/vue"></script>
 </head>
 
   <body>
